fix(formComponent): remove min-height and add different padding on smaller screens in `formComponent`

--- a/src/components/formComponent.css
+++ b/src/components/formComponent.css
@@ -1,6 +1,5 @@
 .formComponent {
   width: clamp(150px, 100% - 2rem, 800px);
-  min-height: 210px;
   display: grid;
   grid-template:
     "input input input button" auto
@@ -106,6 +105,7 @@
     gap: 0.5rem;
     margin: 0 0.5rem;
     width: calc(100% - 1rem);
+    padding: 0.8rem 0.6rem;
   }
 }
 
